--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: run main.py
 
 on:
   schedule:
-    - cron: '2 * * * *' # At 00:00 on Monday
+    - cron: '0 12 * * *' # At 00:00 on Monday
   
 env:
           SOME_SECRET: ${{ secrets.SOME_SECRET }}
